fix to img carousel overflow

--- a/assets/styles/layouts/_image-carousel.scss
+++ b/assets/styles/layouts/_image-carousel.scss
@@ -16,7 +16,7 @@
 
         .slick-list {
             max-height: 100%;
-            overflow-y: scroll;
+            overflow-y: auto;
         }
 
         @include until($tablet) {
